feat: link manifest.json

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Habits tracker</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
     <form id="submission-form">
